--- a/package.json
+++ b/package.json
@@ -6,7 +6,15 @@
     },
     "scripts": {
         "start":"node index.js"
-    }
+    },
+    "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongodb": "^3.4.0",
+    "multer": "^1.4.2",
+    "pkg.json": "^2.0.7"
 
 
 }
